--- a/app/src/main/res/layout/activity_start_edit_sub_category.xml
+++ b/app/src/main/res/layout/activity_start_edit_sub_category.xml
@@ -188,24 +188,18 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
+                <Spinner
                     android:layout_weight="1"
+                    android:id="@+id/gender_array"
                     android:layout_margin="@dimen/margin_5"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
                     android:padding="@dimen/margin_10"
                     android:background="@drawable/rect_whiteboder"
-                    android:hint="Gender">
+                    android:entries="@array/genders">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:inputType="text"
-                        android:maxLines="4"
-                        android:id="@+id/gender"
-                        android:background="@null"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-                </com.google.android.material.textfield.TextInputLayout>
+                </Spinner>
 
             </LinearLayout>
 
