--- a/app/src/main/res/layout/product_imgslider.xml
+++ b/app/src/main/res/layout/product_imgslider.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/image_slider_lay"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <ImageView
+        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/imageView"
+        android:contentDescription="@string/to_date" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/imageView" />
+  <LinearLayout
+      android:visibility="visible"
+      android:background="@color/gray_btn_bg_color"
+      android:id="@+id/zoomImage_lay"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_gravity="center_vertical"
+      android:gravity="center_vertical"
+      android:orientation="vertical">
 
-        <ProgressBar
-            android:id="@+id/progress_dialog"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            android:layout_width="@dimen/margin_50"
-            android:layout_height="@dimen/margin_50"/>
+      <ImageView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:id="@+id/zoomImage"
+          android:layout_gravity="center"
+          android:scaleType="center"
+          android:contentDescription="@string/to_date" />
 
-    </FrameLayout>
-
+  </LinearLayout>
 
 </LinearLayout>
